Minor bug fix with the css/jquery for individual fingering checkboxes which were recently added. This change makes sure that upon loading the webpage, the checkboxes will not be visible since there is no trill/combination fignering, just a single fingering

--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -11,3 +11,6 @@ body {
   border: none;
   margin-top: 20px;
 }
+
+div.split_fingering {margin-bottom: 20px; text-align:left; display:none;} 
+div.split_fingering input {float:left; width:15px !important;}
